# magi

./: .dockerignore  .gitallowed  .gitignore  .gitleaks.toml  .gitsecrets  .goreleaser.yaml  .scaleset-test  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVERSATION_SYNC_PLAN.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  buf.gen.yaml  coverage.out  coverage_all.out  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  internal.out  main.go  partial.out  tools.out  vcs.out
.github/: CODEOWNERS  auto_assign.yml  dependabot.yml  pull_request_template.md
api/: conversations.go  conversations_test.go  health.go  memories.go  middleware.go  recall.go  remember.go  search.go  server.go
classify/: classify.go  classify_test.go
contradiction/: detect.go
db/: client.go  factory.go  links.go  memory.go  memory_test.go  schema.go  tag.go
docs/: AGENT-GUIDE.md  README.md  agent-project-memory.md  agents.md  architecture.md  auth-architecture.md  claude-project-memory.md  conversation-sync-plan.md  deployment.md  distributed-architecture.md  distribution-strategy.md  domain-model-scaffolding.md  git-backed-memory.md  http-api.md  integration-testing.md  local-claude-v0.5.0-handoff.md  magi-sync-design.md  magi-sync-phase1-plan.md  magi01-v0.5.0-upgrade-runbook.md  (+13 more)
unifi-mcp/: .env.example  .gitignore  README.md  pyproject.toml
unifi-mcp/examples/: iot_vlan.tf.example  mcp.client.json
unifi-mcp/src/unifi_mcp/: __init__.py  bootstrap.py  config.py  hcl.py  server.py  terraform.py  unifi_api.py
unifi-mcp/tests/: test_hcl.py
(+354 files in other folders)
