[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unifi-mcp"
version = "0.1.0"
description = "MCP server for UniFi Dream Machine Pro that applies changes via Terraform and reads live state from the UniFi Network API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "j33pguy" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-hcl2>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
unifi-mcp = "unifi_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
